Updated design per Karen

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -150,37 +150,44 @@
 <h3><mark>Determine which form to use</mark></h3>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-  <li class="cnjnctn-col-70">
+  <li class="cnjnctn-col">
     <h4 class="mrgn-tp-sm text-muted"><span class="far fa-file text-muted"></span> <span class="nowrap">Form AB428</span>, Alberta Tax and Credits<span class="wb-inv">: Option 1</span></h4>
    <p>Complete <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-c.html">Form&nbsp;AB428</a></span> if <strong>one</strong> of the following applies:</p>
-<ul class="list-unstyled cnjnctn-type-or brdr-0 mrgn-lft-lg">
-  <li class="cnjnctn-col-40">You were a resident of Alberta at the end of the year</li>
-  <li class="cnjnctn-col">You were a non-resident of Canada <span class="nowrap">in 2022</span> and <strong>any</strong> of the following applies:<ul class="fa-ul">
+<ul>
+  <li>You were a resident of Alberta at the end of the year</li>
+  <li>You were a non-resident of Canada <span class="nowrap">in 2022</span> and <strong>any</strong> of the following applies:<ul class="fa-ul">
 <li><span class="fas fa-check text-success fa-li"></span>You earned income from employment in Alberta</li>
 <li><span class="fas fa-check text-success fa-li"></span>You received income from a business with a permanent establishment <strong>only</strong> in Alberta</li>
 </ul>
 </li>
 </ul>
   </li>
-  <li class="cnjnctn-col">
+  <li class="cnjnctn-col-70">
     <h4 class="mrgn-tp-sm text-muted"><span class="far fa-file text-muted"></span>  Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions<span class="wb-inv">: Option 2</span></h4>
     <p>Complete <a href="/en/revenue-agency/services/forms-publications/forms/t2203.html">Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions</a> <strong>instead</strong> of <span class="nowrap">Form AB428,</span> if:</p>
-	<hr class="brdr-bttm visible-xs">
-<ul class="list-unstyled cnjnctn-type-or  brdr-0  mrgn-lft-lg">
-  <li class="cnjnctn-col-40"><strong>Both</strong> of the following apply:
+	<details><summary>(need a toggle heading here)</summary>
+	<ul>
+  <li><strong>Both</strong> of the following apply:
 <ul class="fa-ul">
 <li><span class="fas fa-check text-success fa-li"></span> You resided in Alberta on <span class="nowrap">December 31, 2022</span> (or the date you left Canada if you emigrated <span class="nowrap">in 2022)</span></li>
 <li><span class="fas fa-check text-success fa-li"></span> All or part of <span class="nowrap">your 2022</span> business income (including income received as a retired, inactive, or limited partner) was earned and can be allocated to a permanent establishment <strong>outside</strong> Alberta</li>
 </ul>
 </li>
- <li class="cnjnctn-col-40"><strong>Both</strong> of the following apply:
+</ul>
+	</details>
+	<details><summary>(need a toggle heading here)</summary>
+	<ul>
+  <li><strong>Both</strong> of the following apply:
 <ul class="fa-ul">
-<li><span class="fas fa-check text-success fa-li"></span> You were a non-resident of Canada throughout 2022</li>
-<li><span class="fas fa-check text-success fa-li"></span> You were carrying on business in <strong>more than one</strong> province or territory in Canada or were receiving income from an office or employment that can reasonably be attributed to duties performed in <strong>more than one</strong> province or territory in Canada</li>
+<li><span class="fas fa-check text-success fa-li"></span> You resided in Alberta on <span class="nowrap">December 31, 2022</span> (or the date you left Canada if you emigrated <span class="nowrap">in 2022)</span></li>
+<li><span class="fas fa-check text-success fa-li"></span> All or part of <span class="nowrap">your 2022</span> business income (including income received as a retired, inactive, or limited partner) was earned and can be allocated to a permanent establishment <strong>outside</strong> Alberta</li>
 </ul>
-<hr class="brdr-bttm visible-xs mrgn-bttm-md">
 </li>
-</ul>
+	
+
+
+
+</ul></details>
   </li>
 </ul>
 
@@ -191,52 +198,14 @@
 
 
 
-
-    <h4>Defintions</h4>
-
-<details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Spouse</summary> refers to a person you are legally married to.&nbsp;</p>
-</details>
-<details><summary class="wb-toggle" data-toggle='{"print": "on"}'>
-Common-law partner </summary>refers to a person who is not your spouse, but with whom you are in a conjugal relationship and <strong>at least one</strong> of the following <span class="nowrap">conditions applies</span>:</p>
-<ul>
-<li>This person has been living with you in a conjugal relationship for at least <span class="nowrap">12 continuous</span> months (including any period of time where you were separated for less than <span class="nowrap">90 days</span> because of a breakdown in the relationship)</li>
-<li>This person is the parent of your child by birth or adoption</li>
-<li>This person has custody and control of your child (or had custody and control immediately before the child turned <span class="nowrap">19 years</span> of age) and your child is wholly dependent on them for support</li>
-</ul>
-
-</details>
-<details><summary class="wb-toggle" data-toggle='{"print": "on"}'>End of the year </summary>means<strong> any </strong>of the following dates:</p>
-<ul>
-<li><span class="nowrap">December 31</span>, 2022</li>
-<li>the date you left Canada if you emigrated <span class="nowrap">in 2022</span></li>
-<li>the date of death for a person who died<span class="nowrap"> in 2022</span></li>
-</ul>
-</details></li>
+</li>
 </ol>
 
 				 <h2 id="h-4">Complete the forms</h2>
 				    <ol class="lst-stps ld-zr">
 		<li><h3><mark>Fill out</mark>Part A – Alberta tax on taxable income</h3>
-		 <p>(put a lead in statement here)</p>
-		<ol class="lst-stps-sub">
-		 <li><mark>Enter your taxable income from line 26000 of your federal tax return.</mark></li>
-		 <li><mark>Determine your taxable income by using the tax rate</mark>
-	 
-		 
-         <details class="mrgn-tp-md"><summary class="wb-toggle" data-toggle='{"print": "on"}'>Alberta tax rates for 2022 <span class="label label-info">Updated amount for 2022</span></summary>
-         <p>The following tax rates are used in the calculation of your Alberta tax on taxable income:</p>
-         <ul>
-<li>the portion of your taxable income that <span class="nowrap">is $134,238</span>&nbsp;or less, <strong>plus</strong></li>
-<li> <span class="nowrap">12% on</span> the portion of your taxable income that is more <span class="nowrap">than $134,238</span>&nbsp;but not more <span class="nowrap">than $161,086</span>, <strong>plus</strong></li>
-<li><span class="nowrap">13% on</span> the portion of your taxable income that is more <span class="nowrap">than $161,086</span>&nbsp;but not more than <span class="nowrap">$214,781</span>,<strong> plus</strong></li>
-<li><span class="nowrap">14% on</span> the portion of your taxable income that is more <span class="nowrap">than $214,781</span>&nbsp;but not more <span class="nowrap">than $322,171</span>, <strong>plus</strong></li>
-<li><span class="nowrap">15% on</span> the portion of your taxable income that is more <span class="nowrap">than $322,171</span></li>
-<li class="brdr-tp"><mark><span class="fas fa-equals text-muted fa-li"></span>Alberta tax on taxable income</span></mark></li>
-
-</ul>
-		 </details></li>
-		 
-		 </ol>
+		 <p>Use your taxable income from line 26000 of your federal tax return to fill in the chart.</p>
+		
 		 </li>
 		 <li><h3><mark>Fill out</mark>
 		  
