fixed <ul> coding

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -166,28 +166,20 @@
     <h4 class="mrgn-tp-sm text-muted"><span class="far fa-file text-muted"></span>  Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions<span class="wb-inv">: Option 2</span></h4>
     <p>Complete <a href="/en/revenue-agency/services/forms-publications/forms/t2203.html">Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions</a> <strong>instead</strong> of <span class="nowrap">Form AB428,</span> if:</p>
 	<details><summary>(need a toggle heading here)</summary>
-	<ul>
-  <li><strong>Both</strong> of the following apply:
+	<p><strong>Both</strong> of the following apply:</p>
 <ul class="fa-ul">
 <li><span class="fas fa-check text-success fa-li"></span> You resided in Alberta on <span class="nowrap">December 31, 2022</span> (or the date you left Canada if you emigrated <span class="nowrap">in 2022)</span></li>
 <li><span class="fas fa-check text-success fa-li"></span> All or part of <span class="nowrap">your 2022</span> business income (including income received as a retired, inactive, or limited partner) was earned and can be allocated to a permanent establishment <strong>outside</strong> Alberta</li>
 </ul>
-</li>
-</ul>
+
 	</details>
 	<details><summary>(need a toggle heading here)</summary>
-	<ul>
-  <li><strong>Both</strong> of the following apply:
+	<p><strong>Both</strong> of the following apply:</p>
 <ul class="fa-ul">
 <li><span class="fas fa-check text-success fa-li"></span> You resided in Alberta on <span class="nowrap">December 31, 2022</span> (or the date you left Canada if you emigrated <span class="nowrap">in 2022)</span></li>
 <li><span class="fas fa-check text-success fa-li"></span> All or part of <span class="nowrap">your 2022</span> business income (including income received as a retired, inactive, or limited partner) was earned and can be allocated to a permanent establishment <strong>outside</strong> Alberta</li>
 </ul>
-</li>
-	
-
-
-
-</ul></details>
+</details>
   </li>
 </ul>
 
