--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -1185,18 +1185,22 @@ Other reason
     "use strict";
     
     let updateChkbx = function(chkbxGroup, chkbxChecked, defaultID, validID, invalidID) {
+        if (chkbxChecked.length === 0) {
+            $("#" + invalidID).addClass("hidden").removeClass("visible");
+            $("#" + validID).addClass("hidden").removeClass("visible");
+            $("#" + defaultID).removeClass("hidden").addClass("visible");
         if (chkbxGroup.length === chkbxChecked.length) {
             $("#" + defaultID).addClass("hidden").removeClass("visible");
             $("#" + invalidID).addClass("hidden").removeClass("visible");
             $("#" + validID).removeClass("hidden").addClass("visible");
-        } else if (chkbxChecked.length > 0) {
+        } else {
             $("#" + defaultID).addClass("hidden").removeClass("visible");
             $("#" + validID).addClass("hidden").removeClass("visible");
             $("#" + invalidID).removeClass("hidden").addClass("visible");
         }
     }, 
     updateChkbxList = function () {
-        updateChkbx($(":input[type=checkbox][name=action-checkbox]"), $(":input[type=checkbox][name=action-checkbox]:checked"), "action-deafult-msg", "action-qualify-msg", "action-not-qualify-msg");
+        updateChkbx($(":input[type=checkbox][name=action-checkbox]"), $(":input[type=checkbox][name=action-checkbox]:checked"), "action-default-msg", "action-qualify-msg", "action-not-qualify-msg");
     };
    
     window.onload = updateChkbxList;
