--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -1189,7 +1189,7 @@ Other reason
             $("#" + invalidID).addClass("hidden").removeClass("visible");
             $("#" + validID).addClass("hidden").removeClass("visible");
             $("#" + defaultID).removeClass("hidden").addClass("visible");
-        if (chkbxGroup.length === chkbxChecked.length) {
+        } else if (chkbxGroup.length === chkbxChecked.length) {
             $("#" + defaultID).addClass("hidden").removeClass("visible");
             $("#" + invalidID).addClass("hidden").removeClass("visible");
             $("#" + validID).removeClass("hidden").addClass("visible");
