--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -373,9 +373,8 @@
          </fieldset>
 
                   <div class="alert alert-info provisional" id="action-default-msg">
-                    <p>Based on your selections above:</p>
                     <h3>You need all of the above to qualify to open a FHSA</h3>
-                    <p>You are not a qualifying first-time home buyer for the purpose of opening an FHSA.</p>
+                    <p>You may not be not a qualifying first-time home buyer for the purpose of opening an FHSA.</p>
                   </div>
                   <div class="alert alert-warning hidden provisional" id="action-not-qualify-msg">
                     <p>Based on your selections above:</p>
