--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -422,6 +422,7 @@
               <p>If you do not meet all of the conditions above you would not be a qualifying individual and could not open an FHSA.</p>
                   </div>
              <div class="alert alert-warning hidden provisional" id="action-all-not-qualify-msg">
+                    <p>Based on your selections above:</p>
                     <h3>You need all of the above to open an FHSA</h3>
               <p>If you do not meet all of the conditions above you would not be a qualifying individual and could not open an FHSA.</p>
                   </div>
