--- a/fhsa/v4/death.html
+++ b/fhsa/v4/death.html
@@ -255,7 +255,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
 </div>
 <p>Generally, if you make a direct transfer to your FHSAs, RRSPs or RRIFs, there will be no immediate tax consequences.</p>
 <p>Any amount you receive as a taxable distribution from the FHSA will have to be included as income on your income tax and benefit return for the year received. These amounts will be subject to income tax withholding and can be claimed on your income tax and benefit return as a credit towards any tax owing for the year received.</p>
-<p>If there is property remaining in the FHSA at the end of the exempt period, you must include the FMV of any property in the FHSA you are entitled to as income on your income tax and benefit return for that year.</p>
+<p>If there is property remaining in the FHSA at the end of the exempt period, you must include the fair market value (FMV) of any property in the FHSA you are entitled to as income on your income tax and benefit return for that year.</p>
 <div class="alert alert-info"><p>You will not be permitted to make a tax-deferred transfer after the exempt period ends.</p>
 </div>
 <p>If the deceased holder had an excess FHSA amount at the time of their death, special rules may apply. <span class="label label-info">Information about these rules will be available at a later date.</span></p>
