--- a/fhsa/v4/toomuch.html
+++ b/fhsa/v4/toomuch.html
@@ -59,7 +59,7 @@
          <main role="main" property="mainContentOfPage" class="container">
           
             <h1 property="name" id="wb-cont" class="gc-thickline">What happens if you contribute or transfer too much to your FHSAs</h1>
-        <p>You may need to pay taxes if you contribute or transfer more to your first home savings <span class="nowrap">accounts (FHSAs)</span> than your <a href="#fhsapartroom" aria-controls="fhsapartroom" class="wb-lbx" role="button">FHSA participation room&nbsp;<span class="far fa-question-circle"></span></a> for the year allows. Learn about how much tax you will be charged if you have an <a href="#excessfhsa" aria-controls="excessfhsa" class="wb-lbx" role="button">excess FHSA amount&nbsp;<span class="far fa-question-circle"></span></a> and the different ways to reduce or eliminate your excess FHSA amounts.</p>
+        <p>You may need to pay taxes if you contribute or transfer more to your First Home Savings <span class="nowrap">Accounts (FHSAs)</span> than your <a href="#fhsapartroom" aria-controls="fhsapartroom" class="wb-lbx" role="button">FHSA participation room&nbsp;<span class="far fa-question-circle"></span></a> for the year allows. Learn about how much tax you will be charged if you have an <a href="#excessfhsa" aria-controls="excessfhsa" class="wb-lbx" role="button">excess FHSA amount&nbsp;<span class="far fa-question-circle"></span></a> and the different ways to reduce or eliminate your excess FHSA amounts.</p>
 
 
 	
