--- a/fhsa/v4/deductions.html
+++ b/fhsa/v4/deductions.html
@@ -59,7 +59,7 @@
          <main role="main" property="mainContentOfPage" class="container">
           
             <h1 property="name" id="wb-cont" class="gc-thickline">Tax deductions for FHSA contributions</h1>
-        <p>Contributions that you make to your first home savings <span class="nowrap">accounts (FHSAs)</span> are generally deductible on your income tax and benefit return for the year of the contribution or a future year, similar to RRSP contributions. It is important to note that transfers from your registered retirement saving plans (RRSPs) to your FHSAs <strong>are not deductible</strong>.</p>
+        <p>Contributions that you make to your First Home Savings <span class="nowrap">Accounts (FHSAs)</span> are generally deductible on your income tax and benefit return for the year of the contribution or a future year, similar to RRSP contributions. It is important to note that transfers from your registered retirement saving plans (RRSPs) to your FHSAs <strong>are not deductible</strong>.</p>
 
 
 	
