--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -199,7 +199,7 @@
          <main role="main" property="mainContentOfPage" class="container">
           
             <h1 property="name" id="wb-cont" class="gc-thickline">Withdrawals and transfers out of your FHSAs</h1>
-                    <p>You may want to take <a href="#propfhsa" aria-controls="propfhsa" class="wb-lbx" role="button">property&nbsp;<span class="far fa-question-circle"></span></a> out of your first home savings account (FHSA) to buy your first house, or for another purpose. You may want to transfer property from your FHSA to another registered account. Depending on the circumstances, you may or may not need to pay taxes on your withdrawals or transfers.</p>
+                    <p>You may want to take <a href="#propfhsa" aria-controls="propfhsa" class="wb-lbx" role="button">property&nbsp;<span class="far fa-question-circle"></span></a> out of your First Home Savings Account (FHSA) to buy your first house, or for another purpose. You may want to transfer property from your FHSA to another registered account. Depending on the circumstances, you may or may not need to pay taxes on your withdrawals or transfers.</p>
 
 
     
