--- a/fhsa/v4/nonresidents.html
+++ b/fhsa/v4/nonresidents.html
@@ -293,7 +293,7 @@
 	<h2 id="h-1">If you become a non-resident after opening an FHSA</h2>
 <p>If you become a non-resident of Canada after you open your FHSA, you can continue to participate normally in your FHSA, with one exception:</p>
 <ul class="fa-ul">
-<li><span class="fas fa-times text-danger fa-li fa-lg"></span>You cannot make a <a href="#qualwith" aria-controls="qualwith" class="wb-lbx" role="button">qualifying withdrawal&nbsp;<span class="far fa-question-circle"></span></a> to build or buy a <a href="#qualhome" aria-controls="qualhome" class="wb-lbx" role="button">qualifying home&nbsp;<span class="far fa-question-circle"></span></a> while you are a non-resident of Canada.</li>
+<li><span class="fas fa-times text-danger fa-li fa-lg"></span>You cannot make a <a href="out.html#h-1-1">qualifying withdrawal</a> to build or buy a <a href="#qualhome" aria-controls="qualhome" class="wb-lbx" role="button">qualifying home&nbsp;<span class="far fa-question-circle"></span></a> while you are a non-resident of Canada.</li>
 </ul>
 <p>One of the requirements of a qualifying withdrawal is that you must be a resident of Canada throughout the period that begins with the date of the first qualifying withdrawal and ends with the date of acquisition of the qualifying home.</p>
 <p>If you are a non-resident of Canada, any taxable withdrawal from your FHSA will be subject to withholding tax in the year of withdrawal.</p>
