--- a/fhsa/v4/close.html
+++ b/fhsa/v4/close.html
@@ -84,7 +84,7 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">The 15th anniversary of opening your first FHSA</li>
 <li class="cnjnctn-col">You turn 71 years of age</li>
-<li class="cnjnctn-col">The year following your first <a href="#qualwith" aria-controls="qualwith" class="wb-lbx" role="button">qualifying withdrawal&nbsp;<span class="far fa-question-circle"></span></a> from your FHSA</li>
+<li class="cnjnctn-col">The year following your first <a href="out.html#h-1-1">qualifying withdrawal</a> from your FHSA</li>
 </ul>
 <p>In order to avoid unintended tax consequences, you should close all of your FHSAs before your maximum participation period ends.</p>
 <p>If you have any <a href="#propfhsa" aria-controls="propfhsa" class="wb-lbx" role="button">property&nbsp;<span class="far fa-question-circle"></span></a> in your FHSA on or before the end of your maximum participation period, generally you can <strong>directly</strong> transfer the property on a tax-deferred basis into your RRSPs or <a href="#rrif" aria-controls="rrif" class="wb-lbx" role="button">registered retirement income <span class="nowrap">funds (RRIFs)&nbsp;</span><span class="far fa-question-circle"></span></a>. For more information about transfers, go to <a href="out.html#h-1-3">Transfers from your FHSAs to your RRSPs and RRIFs</a>.</p>
