--- a/fhsa/v4/death.html
+++ b/fhsa/v4/death.html
@@ -92,7 +92,7 @@
 
 
   
-      <h2><a id="h_1"></a>FHSA participtation after a holder's death</h2>
+      <h2><a id="h_1"></a>FHSA participation after a holder's death</h2>
 
   
 
