--- a/fhsa/v4/index.html
+++ b/fhsa/v4/index.html
@@ -36,9 +36,15 @@
              text: "Français"
            }],
            breadcrumbs: [{
-             title: "Canada.ca",
-             href: "https://www.canada.ca/en.html"
-           }
+           title: "Canada.ca",
+                href: "https://www.canada.ca/en.html"
+              },{
+                title: "Taxes",
+                href: "https://www.canada.ca/en/services/taxes.html"
+              },{
+                title: "Savings and pension plans",
+                href: "https://www.canada.ca/en/services/taxes/savings-and-pension-plans.html"
+              }
 		   ],
            search: true,
            siteMenu: true,
