--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -798,24 +798,24 @@ margin-left: 38px;
 	  
 		
 		 
-		<p>Due date for filing your return, making any elections, and paying any amounts you owe:</p>
+		<p>The due date to file your return, make any elections, and pay amounts you owe is:</p>
 		 <ul class="fa-ul md">
 		 <li><span class="far fa-calendar-alt fa-li text-muted"></span> <strong>April 30 of the following calendar year</strong></li>
 		 </ul>
 			
 
 	<h2>Penalties and interest exceptions for 2022</h2>
-		 <p>Penalties and interest will be waived if you send your return and pay any amounts you owe by <strong>October 31, 2023</strong>.</p>
-<p>The deadline for making any elections for 2022 is also <strong>October 31, 2023</strong>. You make your elections within your Underused Housing Tax return.</p>
+		 <p>Penalties and interest will be waived if we receive your return and amount you owe by <strong>October 31, 2023</strong>.</p>
+<p>The deadline for making any elections for 2022 is also <strong>October 31, 2023</strong>. Elections can be made within your Underused Housing Tax return. </p>
 
-<p>If you have elected to use the fair market value (FMV) for a residential property for 2022, the FMV must have been established between <strong>January 1, 2022 and April 30, 2023</strong>.</p>
+<p>If you have elected to use the fair market value (FMV) for a residential property, for your calculation for 2022, the FMV must have been established between <strong>January 1, 2022, and April 30, 2023</strong>.</p>
 
 
 		 
  
 
-<h2>Penalties for failing to file the return on time</h2>
-      <p>There are significant penalties if you do not send your return and pay an amount you owe when it is due.</p>
+<h2>Penalties and interest for failing to file the return on time</h2>
+      <p>There are significant penalties if we do not receive your return when it is due. </p>
 
 
 
@@ -829,11 +829,11 @@ margin-left: 38px;
    </thead>
    <tbody>
     <tr>
-     <td>Individuals</td>
+     <td>Individual</td>
      <td>$5,000</td>
     </tr>
 	   <tr>
-<td>Corporations</td>
+<td>Corporation</td>
 <td>$10,000</td>
 </tr>
    </tbody>
@@ -841,7 +841,7 @@ margin-left: 38px;
 
 
 
-	 <p>You will also have to pay interest on any amounts you owe.</p>
+	 <p>You will also have to pay interest if we do not receive amounts you owe (tax payable) when it is due. </p>
 		  
 
 
@@ -867,14 +867,20 @@ margin-left: 38px;
 		 <p>Generally, you must keep your records for 6 years from the end of the year they relate to. Your records must be kept in Canada, in English or French, unless otherwise authorized by the Minister.</p>
 
 <details>
-	<summary class="mrgn-tp-md">Example - Vacation property exemption</summary>
+	<summary class="mrgn-tp-md">Example - Exemption for vacation properties </summary>
 	<p>We cannot provide a defined list of records that you can use to support an exemption because each person’s situation is unique. </p>
-	<p>However, some examples to support the vacation property exemption could include: </p>
-	<ul><li>A diary of the days the owner used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
-	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner lived at the property for the 28 day period</li></ul>
+	<p>However, some examples of records to support the exemption for vacation properties could include: </p>
+	<ul><li>A diary of the days the owner, or the owner’s spouse or common-law partner, used the residential property, including the names of any persons who can confirm that the owner occupied the residential property on those days</li></ul>
+	<ul><li>Any invoices, receipts, or statements for goods and services purchased, that provide evidence that the owner occupied the property for at least 28 days</li></ul>
 </details>
-		
-		 
+	<details>
+		<summary>Example - Retain a copy of a filed return</summary>
+		<p>Text</p>
+	</details>	
+		 <details>
+		<summary>Example - Retain a copy of written appraisal for fair market value (FMV)</summary>
+		<p>Text</p>
+	</details>
 		 
       <!--  <nav class="mrgn-bttm-lg mrgn-tp-lg">
             <h3 class="wb-inv">Document navigation</h3>
