--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -794,7 +794,7 @@ margin-left: 38px;
          <section class="gc-nav-section experimental provisional">
             <h1 property="name" id="wb-cont">Pay the tax</h1>
 			
-           		<p>If you are an <strong>affected owner</strong>, and your ownership of the residential property <strong>does not qualify for an exemption</strong>, you must also pay the tax for the calendar year.</p>
+           		<p>If you are an <strong>affected owner</strong>, and your ownership of the residential property <strong>does not qualify for an exemption</strong>, you must pay the tax for the calendar year.</p>
 
 			
 
@@ -802,25 +802,26 @@ margin-left: 38px;
 
 
             </p><h2 id="2">How to pay</h2>
-			<p>Individuals and corporations <strong>must</strong> pay all amounts owing in <strong>Canadian dollars</strong> using any of the following methods:</p>
+			<p>Individuals and corporations <strong>must</strong> pay all amounts owing in <strong>Canadian dollars</strong>.
+<p>You may pay using any of the following methods:</p>
 
 		 
 			</p><ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
   <li class="cnjnctn-col-60">
-    <p>Pay online</p>
+    <p>Online</p>
   </li>
   <li class="cnjnctn-col">
-    <p>Pay by wire transfer or internationally issued credit card</p>
+    <p>By wire transfer or internationally issued credit card</p>
   </li>
   <li class="cnjnctn-col">
-    <p>Pay by cheque</p>
+    <p>By cheque</p>
   </li>
 </ul>
 			
 
 			
 			
-<h3>Pay online</h3>
+<h3>Online</h3>
 
 	<p>Whether you are an individual or a corporation, you may pay using <a href="https://www.canada.ca/en/revenue-agency/services/e-services/payment-save-time-pay-online.html" target="_blank">My Payment</a>.</p>
 
@@ -844,13 +845,13 @@ margin-left: 38px;
 
 
 
-<h3>Pay by wire transfer or internationally issued credit card</h3>
+<h3>By wire transfer or internationally issued credit card</h3>
 <p>Whether you are an individual or a corporation, you might not have a Canadian bank account.</p>
 		 <p>In that case, you may pay using a wire transfer or an internationally issued credit card.</p> For more information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/pay-wire-transfer-non-residents.html">Pay without a Canadian bank account</a>.</p> 
 
-<h3>Pay by cheque</h3>
+<h3>By cheque</h3>
 
-<p>Cheques can be made out to <strong>The Receiver General for Canada</strong>.</p>
+<p>Cheques can be made out to the <strong>Receiver General for Canada</strong>.</p>
 		 <p>Include the following information:</p>
 		 <ul>
 			 <li>If you are an <strong>individual</strong>:</li>
