--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -779,7 +779,7 @@ html:lang(fr) .cnjnctn-or:before {
 	<summary class="mrgn-tp-md">If you are filing as an <strong>individual</strong> (Canadian citizens and permanent residents only)</summary>
 
 <p><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html" target="_blank">My Account for Individuals</a></p>
-    <ul><li>Fill out the UHT2900, Underused Housing Tax Return and Election Form (PDF) and upload it through your CRA My Account</li></ul></ul>
+    <ul><li>Fill out the UHT2900, Underused Housing Tax Return and Election Form (PDF) and upload it through your CRA My Account for Individuals</li></ul></ul>
 	     
 	 <ul><li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#hlp1a" target="_blank">How to register for My Account for Individuals</a></li></ul>
 </details>
@@ -787,7 +787,7 @@ html:lang(fr) .cnjnctn-or:before {
 	      <details>
 		      <summary>If you are filing as a <strong>Canadian corporation</strong> (Canadian citizens and permanent residents only)</summary>
 <p><a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html" target="_blank">My Business Account</a></p>
-     <ul><li>Fill out the UHT2900, Underused Housing Tax Return and Election Form (PDF) and upload it through your CRA My Account</li></ul>
+     <ul><li>Fill out the UHT2900, Underused Housing Tax Return and Election Form (PDF) and upload it through your CRA My Business Account</li></ul>
 	     
 	 <ul><li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#hlp1d" target="_blank">How to register for My Business Account</a></li></ul>
 
