--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -823,7 +823,7 @@ margin-left: 38px;
 			
 <h3>Online</h3>
 
-	<p>Whether you are an individual or a corporation, you may pay using <a href="https://www.canada.ca/en/revenue-agency/services/e-services/payment-save-time-pay-online.html" target="_blank">My Payment</a>.</p>
+	<p>Whether you are an individual or a corporation with a Canadian bank account, you may pay using <a href="https://www.canada.ca/en/revenue-agency/services/e-services/payment-save-time-pay-online.html" target="_blank">My Payment</a>.</p>
 
 <details>
 	<summary>If you are an individual</summary>
@@ -864,21 +864,21 @@ margin-left: 38px;
 		 </ul>
 		 
 
-<p>If you are mailing your return, include your cheque with your return and send to your designated tax centre address.</p>
+<p>If you are mailing your return, you may choose to include a cheque with your return and send to your designated tax centre address.</p>
 <p><a href="https://test.canada.ca/cra-arc/subway/uht/file-return.html#bymail">Find my designated tax centre address</a></p>
 
 	
 				<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
   <li class="cnjnctn-col">
-    <p>If you have mailed your return and have received a Notice of Assessment with an amount owing</p>
+    <p>If you have already mailed your return and have received a Notice of Assessment with an amount owing</p>
   </li>
   <li class="cnjnctn-col">
     <p>If you filed electronically and choose to mail a cheque</p>
   </li>
  
 </ul>	 
-		 
-<p>Send your return to:</p>
+		 <br>
+<p><strong>Mail your cheque to:</strong></p>
    <p>Canada Revenue Agency <br> PO Box 3800 STN A <br> Sudbury ON P3A 0C3</p>
    
   
