--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -797,12 +797,12 @@ margin-left: 38px;
 		
 	  
 		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
-		<p>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>. If you share ownership of a residential property, <strong>each of you</strong> must file a separate return for the property.</p>
+		<p>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>. If you are one of several affected owners of a residential property, <strong>each of you</strong> must file a separate return for the property.</p>
 		 <p>You <strong>must still file</strong> a return even if your ownership of the property qualifies for an exemption and you do not owe any tax.</p>
 		
 
 	        <h2>How to fill out the return</h2>
-<p>Follow the steps below to help you fill out the parts of your return. </p>
+<p>Follow the steps below to help you fill out the parts of your return relevant to your situation.</p>
 <h3>What form to use</h3>
 <ul class="fa-ul">
 <li><span class="far fa-file-alt fa-lg fa-li"></span><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/uht-2900.html" target="_blank">UHT-2900, Underused Housing Tax Return and Election Form</a></li>
@@ -820,7 +820,7 @@ margin-left: 38px;
       <ul>
         <li>Social insurance number <strong>(SIN)</strong></li>
         <li>Individual tax number <strong>(ITN)</strong></li>
-<li>Temporary tax number <strong>(TTN)</strong></li>
+<li>Temporary taxation number <strong>(TTN)</strong></li>
         <li>Canadian business number <strong>(BN)</strong> with an Underused Housing Tax <strong>(RU)</strong> program account identifier code</li>
       </ul>
 
@@ -838,7 +838,7 @@ margin-left: 38px;
 		
 		<h4>Non-residents or temporary residents to Canada</h4>
 <p>If you already have a SIN, you must use it to file your return.</p>
-		<p>If you do not have a SIN, you must use your ITN or TTN to file your return.</p>
+		<p>If you <strong>do not have a SIN</strong>, you <strong>must use your ITN or TTN</strong> to file your return.</p>
 
 		<details>
 <summary>Non-residents (use an ITN)</summary>
@@ -847,8 +847,9 @@ margin-left: 38px;
 
 <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax/in-outside-canada/apply-individual-tax-number.html#how" target="_blank">Apply for an ITN</a></p>
 			
-<p>If you do not have a valid ITN, and are concerned with meeting the filing deadline, you may be able to apply for one by completing the application form (Form T1261) and sending it with your return.</p>
-		<p>Make sure to file your ITN application form, all required supporting documentation, and your Underused Housing Tax return together.</p>
+<p>If you do not have a valid ITN, and are concerned with meeting the filing deadline, you may be able to apply for one by completing the application form (Form T1261) and mailing it with your paper return.</p>
+			<p></p>You will not be able to compete an electronic return without a valid ITN.</p>
+		<p>Make sure to file your ITN application form, all supporting documentation required for the ITN application, and your Underused Housing Tax return together.</p>
 		</details>
 		<details>
 		<summary>Temporary residents (use a TTN)</summary>
@@ -864,6 +865,11 @@ margin-left: 38px;
 		
         <details><summary>Tax identifier numbers for corporations</summary>
         <p>If you are a corporation, you must file your return using a BN <strong>with</strong> an RU program account identifier code.</p> 
+
+<p>If you already have a BN, you will have to register your RU program account before you can file your return. </p>
+		<p>If you <strong>do not</strong> already have a BN, you must get one <strong>and</strong> register your RU program account before you can file your return. </p>
+<p>If you are filing <strong>multiple returns</strong>, you only need to register for <strong>one RU program account</strong> to file all your UHT returns for the calendar year. You <strong>do not</strong> need separate RU program account identifier codes. </p>
+		
         <details>
 		<summary>Canadian corporations</summary>
 		<p>Refer to <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#bro" target="_blank">Business Registration Online</a> to:</p>
