--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -838,7 +838,7 @@ margin-left: 38px;
 		
 		<h4>Non-residents or temporary residents to Canada</h4>
 <p>If you already have a SIN, you must use it to file your return.</p>
-		<p>If you <strong>do not have a SIN</strong>, you <strong>must use your ITN or TTN</strong> to file your return.</p>
+		<p>If you <strong>do not</strong> have a SIN, you <strong>must</strong> use your ITN or TTN to file your return.</p>
 
 		<details>
 <summary>Non-residents (use an ITN)</summary>
@@ -867,9 +867,9 @@ margin-left: 38px;
         <p>If you are a corporation, you must file your return using a BN <strong>with</strong> an RU program account identifier code.</p> 
 
 <p>If you already have a BN, you will have to register your RU program account before you can file your return. </p>
-		<p>If you <strong>do not</strong> already have a BN, you must get one <strong>and</strong> register your RU program account before you can file your return. </p>
-<p>If you are filing <strong>multiple returns</strong>, you only need to register for <strong>one RU program account</strong> to file all your UHT returns for the calendar year. You <strong>do not</strong> need separate RU program account identifier codes. </p>
-		
+		<p>If you <strong>do not</strong> have a BN, you must get one <strong>and</strong> register your RU program account before you can file your return. </p>
+<p>If you are filing <strong>multiple returns</strong>, you only need to register for <strong>one</strong> RU program account to file all your UHT returns for the calendar year. You <strong>do not</strong> need separate RU program account identifier codes. </p>
+	
         <details>
 		<summary>Canadian corporations</summary>
 		<p>Refer to <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#bro" target="_blank">Business Registration Online</a> to:</p>
